--- a/final/lib/final_web/templates/user_registration/new.html.heex
+++ b/final/lib/final_web/templates/user_registration/new.html.heex
@@ -1,10 +1,10 @@
 <div class="auth">
-  <h1>Register</h1>
+  <h1>Registrar</h1>
 
   <.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
     <%= if @changeset.action do %>
       <div class="alert alert-danger">
-        <p>Oops, something went wrong! Please check the errors below.</p>
+        <p>Oops, alguma coisa de errado ocorreu! Cheque os erros abaixo.</p>
       </div>
     <% end %>
 
@@ -22,7 +22,6 @@
   </.form>
 
   <p>
-    <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
-    <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+    <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
   </p>
 </div>
