--- a/final/lib/final_web/templates/user_settings/edit.html.heex
+++ b/final/lib/final_web/templates/user_settings/edit.html.heex
@@ -1,31 +1,7 @@
 <div class="auth">
-  <h1>Settings</h1>
+  <h1>Configurações</h1>
 
-  <h3>Change email</h3>
-
-  <.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
-    <%= if @email_changeset.action do %>
-      <div class="alert alert-danger">
-        <p>Oops, something went wrong! Please check the errors below.</p>
-      </div>
-    <% end %>
-
-    <%= hidden_input f, :action, name: "action", value: "update_email" %>
-
-    <%= label f, :email %>
-    <%= email_input f, :email, required: true %>
-    <%= error_tag f, :email %>
-
-    <%= label f, :current_password, for: "current_password_for_email" %>
-    <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
-    <%= error_tag f, :current_password %>
-
-    <div>
-      <%= submit "Change email" %>
-    </div>
-  </.form>
-
-  <h3>Change password</h3>
+  <h3>Alterar Senha</h3>
 
   <.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
     <%= if @password_changeset.action do %>
@@ -36,11 +12,11 @@
 
     <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
-    <%= label f, :password, "New password" %>
+    <%= label f, :password, "Nova Senha" %>
     <%= password_input f, :password, required: true %>
     <%= error_tag f, :password %>
 
-    <%= label f, :password_confirmation, "Confirm new password" %>
+    <%= label f, :password_confirmation, "Confirme a nova senha" %>
     <%= password_input f, :password_confirmation, required: true %>
     <%= error_tag f, :password_confirmation %>
 
@@ -49,7 +25,7 @@
     <%= error_tag f, :current_password %>
 
     <div>
-      <%= submit "Change password" %>
+      <%= submit "Modificar" %>
     </div>
   </.form>
 </div>
