--- a/final/lib/final_web/templates/layout/root.html.heex
+++ b/final/lib/final_web/templates/layout/root.html.heex
@@ -10,6 +10,7 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
+    <%= if @current_user do %>
     <header>
       <section class="container">
         <nav role="navigation">
@@ -17,6 +18,7 @@
         </nav>
       </section>
     </header>
+    <% end %>
     <%= @inner_content %>
   </body>
 </html>
