--- a/final/lib/final_web/templates/page/index.html.heex
+++ b/final/lib/final_web/templates/page/index.html.heex
@@ -1,11 +1,31 @@
 <div class="flex">
-    <div class="w-20 flex-none flex flex-col min-h-screen h-screen overflow-y-auto">
-        <div>logos</div>
+    <div class="bg-gray-900 w-20 flex-none flex flex-col min-h-screen h-screen px-2 py-2">
+        <div class=" overflow-y-auto">
+            <ul class="text-center">
+                <li><a href="#"><img src="images/refresh.svg" alt="discord" class="w-12 h-12 rounded-full mx-auto"></a></li>
+                <li class="border-b border-gray-700 mx-4 mt-3"></li>
+                <li class="mt-3"><a href="#"><img src="images/light-on.svg" alt="discord" class="w-12 h-12 rounded-full mx-auto"></a></li>
+                <li class="mt-3"><a href="#"><img src="images/light-off.svg" alt="discord" class="w-12 h-12 rounded-full mx-auto"></a></li>
+                <li class="mt-3">
+                    <a href="#" class="w-12 h-12 bg-gray-800 text-teal-500 hover:bg-teal-500 hover:text-white inline-block rounded-full">
+                        <svg fill="currentColor" height="42" viewBox="-3 -5 30 30" width="50"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M19.23 15.26l-2.54-.29c-.61-.07-1.21.14-1.64.57l-1.84 1.84c-2.83-1.44-5.15-3.75-6.59-6.59l1.85-1.85c.43-.43.64-1.03.57-1.64l-.29-2.52c-.12-1.01-.97-1.77-1.99-1.77H5.03c-1.13 0-2.07.94-2 2.07.53 8.54 7.36 15.36 15.89 15.89 1.13.07 2.07-.87 2.07-2v-1.73c.01-1.01-.75-1.86-1.76-1.98z"></path></svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="flex flex-col min-h-screen h-screen">
-        <div class="bg-red-500 flex">
-            <div class="bg-red-300 w-56 flex-none">Tailwind CSS</div>
-            <div>rest</div>
+        <div class="flex text-white">
+            <div class="bg-gray-800 w-56 flex-none flex items-center justify-between px-3 py-2">
+                <div>Tailwind CSS</div>
+                <button>
+                    <img src="images/down.svg" alt="discord" class="w-6 h-6" >
+                </button>
+            </div>
+            <div class="flex-1 bg-gray-750 flex items-center justify-between px-4">
+                <div>left</div>
+                <div>right</div>
+            </div>
         </div>
         <div class="flex-1 bg-blue-500 flex overflow-y-hidden">
             <div class="bg-green-300 w-56 flex-none overflow-y-auto flex flex-col justify-between">
