--- a/final/lib/final_web/live/chat.html.heex
+++ b/final/lib/final_web/live/chat.html.heex
@@ -5,8 +5,16 @@
                 <li><a href="#"><img src="images/license.svg" alt="language2language" class="w-12 h-12 rounded-full mx-auto"></a></li>
                 <li class="border-b border-gray-700 mx-4 mt-3"></li>
                 <%= for chat <- @chats do %>
-                   <li class="mt-3"><a href="#"><img src={"images/#{@chat.avatar}.svg"} alt="discord" class="w-12 h-12 rounded-full mx-auto">
- </a></li>
+                    <li class={"#{if @selected_chat == chat, do: "bg-cool-gray-800", else: "hover:bg-cool-gray-600 "} mt-3 rounded"} >
+                        <%= live_patch link_chat(chat), 
+                            to: Routes.live_path(
+                                @socket,
+                                __MODULE__,
+                                id: chat.id
+                            )
+                         %>
+                        
+                    </li>
                 <% end %>
                 <li class="mt-3">
                     <a href="#" class="w-12 h-12 bg-gray-800 text-teal-500 hover:bg-teal-500 hover:text-white inline-block rounded-full">
