--- a/final/lib/final_web/live/chat.html.heex
+++ b/final/lib/final_web/live/chat.html.heex
@@ -77,16 +77,16 @@
                             <svg fill="currentColor" enable-background="new 0 0 20 20" height="20" viewBox="0 0 20 20" width="20"><g><rect fill="none" height="20" width="20"></rect></g><g><g></g><path d="M9.99,3C6.13,3,3,6.14,3,10s3.13,7,6.99,7c3.87,0,7.01-3.14,7.01-7S13.86,3,9.99,3z M7,7c0.55,0,1,0.45,1,1 c0,0.55-0.45,1-1,1S6,8.55,6,8C6,7.45,6.45,7,7,7z M10,14c-1.86,0-3.41-1.28-3.86-3h7.72C13.41,12.72,11.86,14,10,14z M13,9 c-0.55,0-1-0.45-1-1c0-0.55,0.45-1,1-1s1,0.45,1,1C14,8.55,13.55,9,13,9z"></path></g></svg>
                         </button>
                         <div class="flex-1">
-                        <form multipart class="flex" phx-submit="save_user">
+                        <.form let={text_line} for={@changeset} multipart class="flex" phx_submit="confirmation">
                             <div class="flex-1">
-                                <input type="text" class="w-full text-sm h-10 px-2 py-2 bg-gray-700 text-gray-200 focus:outline-none">
+                                <%= text_input text_line, :text, id: "text-field", autocomplete: "off", class: "w-full text-sm h-10 px-2 py-2 bg-gray-700 text-gray-200 focus:outline-none" %>
                             </div>
-                        <div class="px-2 py-2 bg-gray-700 rounded-r flex item-center h-10 hover:text-white border-r border-t border-b border-gray-500">
-                            <button>
-                                <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2 .01 7z"></path></svg>
-                            </button>
-                        </div>
-                        </form>
+                            <div class="px-2 py-2 bg-gray-700 rounded-r flex item-center h-10 hover:text-white border-r border-t border-b border-gray-500">
+                                <button id="btn-msg" phx-click={JS.dispatch("chat:text", to: "#text-field")} phx-hook="SendMessage">
+                                    <svg fill="currentColor" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2 .01 7z"></path></svg>
+                                </button>
+                            </div>
+                        </.form>
                         </div>
                     </div>
                 </div>
